# solis_and_iog

./: .gitignore  README.md  build.sh  check_code.sh  install.py  pyproject.toml
linux/: solis_and_iog-0.1.0-py3-none-any.whl  solis_and_iog-0.1.1-py3-none-any.whl  solis_and_iog-0.1.2-py3-none-any.whl  solis_and_iog-1.0.0-py3-none-any.whl  solis_and_iog-1.0.1-py3-none-any.whl  solis_and_iog-1.0.2-py3-none-any.whl  solis_and_iog-1.0.3-py3-none-any.whl  solis_and_iog-1.0.4-py3-none-any.whl  solis_and_iog-1.0.5-py3-none-any.whl  solis_and_iog-1.0.6-py3-none-any.whl  solis_and_iog-1.0.7-py3-none-any.whl
src/solis_and_iog/: octopus.py  solis.py  solis_and_iog.py
tests/: test_solis_and_iog.py
