[project]
name = "solis_and_iog"
version = "1.0.0"
description = "A tool to check if your Intelligent Octopus Go account has scheduled an EV charge outside the 23:30-5:30 slot. If this is found to be the case configure your Solis battery system to charge the battery in the scheduled period. This allows use the home battery to be charged during this time on low cost electricity."
authors = [
    {name = "Paul Austen",email = "pjaos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
]

[tool.poetry]
packages = [{include = "solis_and_iog", from = "src"}]

[tool.poetry.dependencies]
# Cross-platform packages
requests = "*"
dotenv = "*"
p3lib = "^1.1.155"
pytest = "*"

[tool.poetry.scripts]
solis_and_iog = "solis_and_iog.solis_and_iog:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
